init:初始化设计模式、并发

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
     <modules>
         <module>litespring</module>
         <module>base</module>
+        <module>designPattern</module>
+        <module>concurrent</module>
     </modules>
     <dependencyManagement>
         <dependencies>
